; ModuleID = '/home/carl/AnghaBench/redis/src/extr_object.c_createStringObject.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_object.c_createStringObject.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OBJ_ENCODING_EMBSTR_SIZE_LIMIT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @createStringObject(i8* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @OBJ_ENCODING_EMBSTR_SIZE_LIMIT, align 8
  %8 = icmp ule i64 %6, %7
  br i1 %8, label %9, label %13

9:                                                ; preds = %2
  %10 = load i8*, i8** %4, align 8
  %11 = load i64, i64* %5, align 8
  %12 = call i32* @createEmbeddedStringObject(i8* %10, i64 %11)
  store i32* %12, i32** %3, align 8
  br label %17

13:                                               ; preds = %2
  %14 = load i8*, i8** %4, align 8
  %15 = load i64, i64* %5, align 8
  %16 = call i32* @createRawStringObject(i8* %14, i64 %15)
  store i32* %16, i32** %3, align 8
  br label %17

17:                                               ; preds = %13, %9
  %18 = load i32*, i32** %3, align 8
  ret i32* %18
}

declare dso_local i32* @createEmbeddedStringObject(i8*, i64) #1

declare dso_local i32* @createRawStringObject(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
